--- a/package.json
+++ b/package.json
@@ -14,5 +14,9 @@
   "bugs": {
     "url": "https://github.com/saintkim12/saintkim12.github.io/issues"
   },
-  "homepage": "https://github.com/saintkim12/saintkim12.github.io#readme"
+  "homepage": "https://github.com/saintkim12/saintkim12.github.io#readme",
+  "devDependencies": {
+    "eslint": "^7.31.0",
+    "eslint-plugin-html": "^6.1.2"
+  }
 }
