--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "0.1.0",
   "description": "my page",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "snowpack dev",
+    "build": "snowpack build"
   },
   "repository": {
     "type": "git",
@@ -17,6 +18,7 @@
   "homepage": "https://github.com/saintkim12/saintkim12.github.io#readme",
   "devDependencies": {
     "eslint": "^7.31.0",
-    "eslint-plugin-html": "^6.1.2"
+    "eslint-plugin-html": "^6.1.2",
+    "snowpack": "^3.8.2"
   }
 }
